Working notebook to hash all training images

--- a/detectDuplicateImages.ipynb
+++ b/detectDuplicateImages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Build a dictionary of hashes as keys and files as values.\n",
     "# Keys with multiple values indicate duplicate images.\n",
     "\n",
     "# Folder where images are located; put files into a list\n",
-    "imgDir = \"data/images/test_duplicates/\"\n",
+    "imgDir = \"data/images/train/\"\n",
     "imgList = [f for f in os.listdir(imgDir)]\n",
     "\n",
     "hashDict = {}  # Dictionary of hash keys with images\n",
+    "count = 0\n",
     "\n",
     "startTime = time.time()\n",
     "\n",
@@ -54,19 +57,23 @@
     "    fileList.append(i)  # append latest image to list of identical images if exist\n",
     "    hashDict[imgHash] = fileList  # update hash key with new list\n",
     "    \n",
+    "    count += 1\n",
+    "    if count % 1000 == 0:\n",
+    "        print(\"Count = \", count)\n",
+    "    \n",
     "endTime = time.time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken = 1.884777307510376 s\n"
+      "Time taken = 7419.676875114441 s\n"
      ]
     }
    ],
@@ -76,7 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1014544"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,40 +116,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{138110042112: ['1028.jpg', '120.jpg', '126.jpg', '185.jpg'],\n",
-       " 1969990237916962591: ['1892.jpg', '19553.jpg'],\n",
-       " 2587432787722659936: ['118097.jpg', '13646.jpg'],\n",
-       " 3428969512287784078: ['434209.jpg', '77954.jpg'],\n",
-       " 3467807000533420072: ['127099.jpg', '12867.jpg'],\n",
-       " 4853353828243395977: ['482198.jpg', '825927.jpg'],\n",
-       " 5360800460935088037: ['2138.jpg', '804679.jpg'],\n",
-       " 5851069153878555435: ['10948.jpg', '358445.jpg', '5638.jpg'],\n",
-       " 6139362478180865165: ['820356.jpg', '837456.jpg'],\n",
-       " 6200217072142355271: ['847856.jpg', '953065.jpg', '993759.jpg'],\n",
-       " 9503495932944435181: ['845934.jpg', '937722.jpg']}"
+       "42312"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "duplicatesDict"
+    "len(duplicatesDict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save to csv\n",
+    "import csv\n",
+    "w = csv.writer(open(\"duplicatesDict_train.csv\", \"w\"))\n",
+    "for key, val in duplicatesDict.items():\n",
+    "    w.writerow([key, val])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to json\n",
+    "import json\n",
+    "json = json.dumps(duplicatesDict)\n",
+    "f = open(\"duplicatesDict_train.json\", 'w')\n",
+    "f.write(json)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5578001356633761481\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get key for particular file\n",
+    "for key, value in hashDict.items():\n",
+    "    if \"707540.jpg\" in value:\n",
+    "        print(key)"
+   ]
   }
  ],
  "metadata": {
